<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:onClick="closeApp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_app"
            android:layout_marginEnd="15dp" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statement"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="123dp"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="130dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editTextTextPasswordLogin"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:onClick="loginToApp"
                android:id="@+id/login_btn"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_btn"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:background="@drawable/bottom_btn"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>



    </LinearLayout>


</RelativeLayout>