<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/first_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:onClick="backToLogin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>

    <ImageView
        android:onClick="closeApp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/first_linear_layout">

        <TextView
            android:id="@+id/profile_maker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/profil_maker"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/name"
            android:layout_below="@id/profile_maker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edit_text_name"
            android:layout_marginTop="25dp"
            android:text="@string/name"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary" />


        <EditText
            android:layout_below="@id/name"
            android:id="@+id/edit_text_name"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@drawable/custom_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColorLink="@color/colorPrimary" />

        <TextView
            android:id="@+id/lastname"
            android:layout_below="@id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edit_text_name"
            android:layout_marginTop="25dp"
            android:text="@string/surname"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_below="@id/lastname"
            android:id="@+id/edit_text_lastname"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@drawable/custom_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColorLink="@color/colorPrimary"/>


        <TextView
            android:id="@+id/email"
            android:layout_below="@id/edit_text_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edit_text_name"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"/>


        <EditText
            android:layout_below="@id/email"
            android:id="@+id/edit_text_email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:textColorLink="@color/colorPrimary"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/password"
            android:layout_below="@id/edit_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edit_text_name"
            android:layout_marginTop="25dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary" />


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_below="@id/password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:textColorLink="@color/colorPrimary"/>

    </RelativeLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:background="@drawable/custom_btn"
        android:layout_alignParentBottom="true"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"/>

</RelativeLayout>