<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical">

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">


        <LinearLayout
            android:background="@drawable/profile_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">
            
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/text_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/burak_karaduman"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:textStyle="bold"/>

        </LinearLayout>
        
        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_50"
                        android:paddingTop="15dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </LinearLayout>




                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answered_questions"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_50"
                        android:paddingTop="15dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </LinearLayout>





                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_50"
                        android:paddingTop="15dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">

            <LinearLayout
                android:id="@+id/info_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp">


                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email"/>

                <TextView
                    android:id="@+id/email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/burak_gmail_com"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>
            

        </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/change_profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_above="@id/log_out_profile"
        android:text="Profil Fotoğrafını Değiştir"
        android:textSize="20sp"
        android:background="@drawable/custom_btn"
        android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/log_out_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_btn"
            android:layout_alignParentBottom="true"
            android:text="@string/log_out"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

    </RelativeLayout>

</LinearLayout>